# pantheon-llm-roundtable

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: pantheon.yaml
src/pantheon/: __init__.py  __main__.py  anti_sycophancy.py  app.py  bot_pool.py  config.py  context_builder.py  logging_setup.py  models.py  prompts.py  summarizer.py
src/pantheon/adapters/: __init__.py  base.py  google.py  openai_compat.py
src/pantheon/scenes/: __init__.py  discussion.py
tests/: test_anti_sycophancy.py  test_config.py
